Fix paragraph, image, and align left/right margins in the editor.

--- a/resources/scss/blocks/core-image/_style.scss
+++ b/resources/scss/blocks/core-image/_style.scss
@@ -6,6 +6,10 @@
 /// @link   https://wptavern.com
 ////
 
+figure.wp-block-image {
+	margin-top: $spacing-global;
+}
+
 .wp-block-image {
 	margin-top: $spacing-global;
 
